[gd_scene load_steps=8 format=2]

[ext_resource path="res://actors/Snake.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/Apple.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/MainGameScene.gd" type="Script" id=3]
[ext_resource path="res://sprites/fantasy/fantasy_ [version 2.0]/taiga_/taiga_.png" type="Texture" id=4]

[sub_resource type="TileSet" id=1]
0/name = "taiga_.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 160, 32, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "taiga_.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 160, 48, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "taiga_.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 176, 80, 48, 48 )
2/tile_mode = 1
2/autotile/bitmask_mode = 1
2/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27 ]
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 496, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 304 )

[node name="MainGameScene" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap2" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 1, 2, 2, 1, 3, 2, 1, 4, 2, 1, 5, 2, 1, 6, 2, 1, 7, 2, 1, 8, 2, 1, 9, 2, 1, 10, 2, 1, 11, 2, 1, 12, 2, 1, 13, 2, 1, 14, 2, 1, 15, 2, 1, 16, 2, 1, 17, 2, 1, 18, 2, 1, 19, 2, 1, 20, 2, 1, 21, 2, 1, 22, 2, 1, 23, 2, 1, 24, 2, 1, 25, 2, 1, 26, 2, 1, 27, 2, 1, 28, 2, 1, 29, 2, 1, 30, 2, 1, 31, 2, 2, 65536, 2, 65536, 65537, 2, 65537, 65538, 2, 65537, 65539, 2, 65537, 65540, 2, 65537, 65541, 2, 65537, 65542, 2, 65537, 65543, 2, 65537, 65544, 2, 65537, 65545, 2, 65537, 65546, 2, 65537, 65547, 2, 65537, 65548, 2, 65537, 65549, 2, 65537, 65550, 2, 65537, 65551, 2, 65537, 65552, 2, 65537, 65553, 2, 65537, 65554, 2, 65537, 65555, 2, 65537, 65556, 2, 65537, 65557, 2, 65537, 65558, 2, 65537, 65559, 2, 65537, 65560, 2, 65537, 65561, 2, 65537, 65562, 2, 65537, 65563, 2, 65537, 65564, 2, 65537, 65565, 2, 65537, 65566, 2, 65537, 65567, 2, 65538, 131072, 2, 65536, 131073, 2, 65537, 131074, 2, 65537, 131075, 2, 65537, 131076, 2, 65537, 131077, 2, 65537, 131078, 2, 65537, 131079, 2, 65537, 131080, 2, 65537, 131081, 2, 65537, 131082, 2, 65537, 131083, 2, 65537, 131084, 2, 65537, 131085, 2, 65537, 131086, 2, 65537, 131087, 2, 65537, 131088, 2, 65537, 131089, 2, 65537, 131090, 2, 65537, 131091, 2, 65537, 131092, 2, 65537, 131093, 2, 65537, 131094, 2, 65537, 131095, 2, 65537, 131096, 2, 65537, 131097, 2, 65537, 131098, 2, 65537, 131099, 2, 65537, 131100, 2, 65537, 131101, 2, 65537, 131102, 2, 65537, 131103, 2, 65538, 196608, 2, 65536, 196609, 2, 65537, 196610, 2, 65537, 196611, 2, 65537, 196612, 2, 65537, 196613, 2, 65537, 196614, 2, 65537, 196615, 2, 65537, 196616, 2, 65537, 196617, 2, 65537, 196618, 2, 65537, 196619, 2, 65537, 196620, 2, 65537, 196621, 2, 65537, 196622, 2, 65537, 196623, 2, 65537, 196624, 2, 65537, 196625, 2, 65537, 196626, 2, 65537, 196627, 2, 65537, 196628, 2, 65537, 196629, 2, 65537, 196630, 2, 65537, 196631, 2, 65537, 196632, 2, 65537, 196633, 2, 65537, 196634, 2, 65537, 196635, 2, 65537, 196636, 2, 65537, 196637, 2, 65537, 196638, 2, 65537, 196639, 2, 65538, 262144, 2, 65536, 262145, 2, 65537, 262146, 2, 65537, 262147, 2, 65537, 262148, 2, 65537, 262149, 2, 65537, 262150, 2, 65537, 262151, 2, 65537, 262152, 2, 65537, 262153, 2, 65537, 262154, 2, 65537, 262155, 2, 65537, 262156, 2, 65537, 262157, 2, 65537, 262158, 2, 65537, 262159, 2, 65537, 262160, 2, 65537, 262161, 2, 65537, 262162, 2, 65537, 262163, 2, 65537, 262164, 2, 65537, 262165, 2, 65537, 262166, 2, 65537, 262167, 2, 65537, 262168, 2, 65537, 262169, 2, 65537, 262170, 2, 65537, 262171, 2, 65537, 262172, 2, 65537, 262173, 2, 65537, 262174, 2, 65537, 262175, 2, 65538, 327680, 2, 65536, 327681, 2, 65537, 327682, 2, 65537, 327683, 2, 65537, 327684, 2, 65537, 327685, 2, 65537, 327686, 2, 65537, 327687, 2, 65537, 327688, 2, 65537, 327689, 2, 65537, 327690, 2, 65537, 327691, 2, 65537, 327692, 2, 65537, 327693, 2, 65537, 327694, 2, 65537, 327695, 2, 65537, 327696, 2, 65537, 327697, 2, 65537, 327698, 2, 65537, 327699, 2, 65537, 327700, 2, 65537, 327701, 2, 65537, 327702, 2, 65537, 327703, 2, 65537, 327704, 2, 65537, 327705, 2, 65537, 327706, 2, 65537, 327707, 2, 65537, 327708, 2, 65537, 327709, 2, 65537, 327710, 2, 65537, 327711, 2, 65538, 393216, 2, 65536, 393217, 2, 65537, 393218, 2, 65537, 393219, 2, 65537, 393220, 2, 65537, 393221, 2, 65537, 393222, 2, 65537, 393223, 2, 65537, 393224, 2, 65537, 393225, 2, 65537, 393226, 2, 65537, 393227, 2, 65537, 393228, 2, 65537, 393229, 2, 65537, 393230, 2, 65537, 393231, 2, 65537, 393232, 2, 65537, 393233, 2, 65537, 393234, 2, 65537, 393235, 2, 65537, 393236, 2, 65537, 393237, 2, 65537, 393238, 2, 65537, 393239, 2, 65537, 393240, 2, 65537, 393241, 2, 65537, 393242, 2, 65537, 393243, 2, 65537, 393244, 2, 65537, 393245, 2, 65537, 393246, 2, 65537, 393247, 2, 65538, 458752, 2, 65536, 458753, 2, 65537, 458754, 2, 65537, 458755, 2, 65537, 458756, 2, 65537, 458757, 2, 65537, 458758, 2, 65537, 458759, 2, 65537, 458760, 2, 65537, 458761, 2, 65537, 458762, 2, 65537, 458763, 2, 65537, 458764, 2, 65537, 458765, 2, 65537, 458766, 2, 65537, 458767, 2, 65537, 458768, 2, 65537, 458769, 2, 65537, 458770, 2, 65537, 458771, 2, 65537, 458772, 2, 65537, 458773, 2, 65537, 458774, 2, 65537, 458775, 2, 65537, 458776, 2, 65537, 458777, 2, 65537, 458778, 2, 65537, 458779, 2, 65537, 458780, 2, 65537, 458781, 2, 65537, 458782, 2, 65537, 458783, 2, 65538, 524288, 2, 65536, 524289, 2, 65537, 524290, 2, 65537, 524291, 2, 65537, 524292, 2, 65537, 524293, 2, 65537, 524294, 2, 65537, 524295, 2, 65537, 524296, 2, 65537, 524297, 2, 65537, 524298, 2, 65537, 524299, 2, 65537, 524300, 2, 65537, 524301, 2, 65537, 524302, 2, 65537, 524303, 2, 65537, 524304, 2, 65537, 524305, 2, 65537, 524306, 2, 65537, 524307, 2, 65537, 524308, 2, 65537, 524309, 2, 65537, 524310, 2, 65537, 524311, 2, 65537, 524312, 2, 65537, 524313, 2, 65537, 524314, 2, 65537, 524315, 2, 65537, 524316, 2, 65537, 524317, 2, 65537, 524318, 2, 65537, 524319, 2, 65538, 589824, 2, 65536, 589825, 2, 65537, 589826, 2, 65537, 589827, 2, 65537, 589828, 2, 65537, 589829, 2, 65537, 589830, 2, 65537, 589831, 2, 65537, 589832, 2, 65537, 589833, 2, 65537, 589834, 2, 65537, 589835, 2, 65537, 589836, 2, 65537, 589837, 2, 65537, 589838, 2, 65537, 589839, 2, 65537, 589840, 2, 65537, 589841, 2, 65537, 589842, 2, 65537, 589843, 2, 65537, 589844, 2, 65537, 589845, 2, 65537, 589846, 2, 65537, 589847, 2, 65537, 589848, 2, 65537, 589849, 2, 65537, 589850, 2, 65537, 589851, 2, 65537, 589852, 2, 65537, 589853, 2, 65537, 589854, 2, 65537, 589855, 2, 65538, 655360, 2, 65536, 655361, 2, 65537, 655362, 2, 65537, 655363, 2, 65537, 655364, 2, 65537, 655365, 2, 65537, 655366, 2, 65537, 655367, 2, 65537, 655368, 2, 65537, 655369, 2, 65537, 655370, 2, 65537, 655371, 2, 65537, 655372, 2, 65537, 655373, 2, 65537, 655374, 2, 65537, 655375, 2, 65537, 655376, 2, 65537, 655377, 2, 65537, 655378, 2, 65537, 655379, 2, 65537, 655380, 2, 65537, 655381, 2, 65537, 655382, 2, 65537, 655383, 2, 65537, 655384, 2, 65537, 655385, 2, 65537, 655386, 2, 65537, 655387, 2, 65537, 655388, 2, 65537, 655389, 2, 65537, 655390, 2, 65537, 655391, 2, 65538, 720896, 2, 65536, 720897, 2, 65537, 720898, 2, 65537, 720899, 2, 65537, 720900, 2, 65537, 720901, 2, 65537, 720902, 2, 65537, 720903, 2, 65537, 720904, 2, 65537, 720905, 2, 65537, 720906, 2, 65537, 720907, 2, 65537, 720908, 2, 65537, 720909, 2, 65537, 720910, 2, 65537, 720911, 2, 65537, 720912, 2, 65537, 720913, 2, 65537, 720914, 2, 65537, 720915, 2, 65537, 720916, 2, 65537, 720917, 2, 65537, 720918, 2, 65537, 720919, 2, 65537, 720920, 2, 65537, 720921, 2, 65537, 720922, 2, 65537, 720923, 2, 65537, 720924, 2, 65537, 720925, 2, 65537, 720926, 2, 65537, 720927, 2, 65538, 786432, 2, 65536, 786433, 2, 65537, 786434, 2, 65537, 786435, 2, 65537, 786436, 2, 65537, 786437, 2, 65537, 786438, 2, 65537, 786439, 2, 65537, 786440, 2, 65537, 786441, 2, 65537, 786442, 2, 65537, 786443, 2, 65537, 786444, 2, 65537, 786445, 2, 65537, 786446, 2, 65537, 786447, 2, 65537, 786448, 2, 65537, 786449, 2, 65537, 786450, 2, 65537, 786451, 2, 65537, 786452, 2, 65537, 786453, 2, 65537, 786454, 2, 65537, 786455, 2, 65537, 786456, 2, 65537, 786457, 2, 65537, 786458, 2, 65537, 786459, 2, 65537, 786460, 2, 65537, 786461, 2, 65537, 786462, 2, 65537, 786463, 2, 65538, 851968, 2, 65536, 851969, 2, 65537, 851970, 2, 65537, 851971, 2, 65537, 851972, 2, 65537, 851973, 2, 65537, 851974, 2, 65537, 851975, 2, 65537, 851976, 2, 65537, 851977, 2, 65537, 851978, 2, 65537, 851979, 2, 65537, 851980, 2, 65537, 851981, 2, 65537, 851982, 2, 65537, 851983, 2, 65537, 851984, 2, 65537, 851985, 2, 65537, 851986, 2, 65537, 851987, 2, 65537, 851988, 2, 65537, 851989, 2, 65537, 851990, 2, 65537, 851991, 2, 65537, 851992, 2, 65537, 851993, 2, 65537, 851994, 2, 65537, 851995, 2, 65537, 851996, 2, 65537, 851997, 2, 65537, 851998, 2, 65537, 851999, 2, 65538, 917504, 2, 65536, 917505, 2, 65537, 917506, 2, 65537, 917507, 2, 65537, 917508, 2, 65537, 917509, 2, 65537, 917510, 2, 65537, 917511, 2, 65537, 917512, 2, 65537, 917513, 2, 65537, 917514, 2, 65537, 917515, 2, 65537, 917516, 2, 65537, 917517, 2, 65537, 917518, 2, 65537, 917519, 2, 65537, 917520, 2, 65537, 917521, 2, 65537, 917522, 2, 65537, 917523, 2, 65537, 917524, 2, 65537, 917525, 2, 65537, 917526, 2, 65537, 917527, 2, 65537, 917528, 2, 65537, 917529, 2, 65537, 917530, 2, 65537, 917531, 2, 65537, 917532, 2, 65537, 917533, 2, 65537, 917534, 2, 65537, 917535, 2, 65538, 983040, 2, 65536, 983041, 2, 65537, 983042, 2, 65537, 983043, 2, 65537, 983044, 2, 65537, 983045, 2, 65537, 983046, 2, 65537, 983047, 2, 65537, 983048, 2, 65537, 983049, 2, 65537, 983050, 2, 65537, 983051, 2, 65537, 983052, 2, 65537, 983053, 2, 65537, 983054, 2, 65537, 983055, 2, 65537, 983056, 2, 65537, 983057, 2, 65537, 983058, 2, 65537, 983059, 2, 65537, 983060, 2, 65537, 983061, 2, 65537, 983062, 2, 65537, 983063, 2, 65537, 983064, 2, 65537, 983065, 2, 65537, 983066, 2, 65537, 983067, 2, 65537, 983068, 2, 65537, 983069, 2, 65537, 983070, 2, 65537, 983071, 2, 65538, 1048576, 2, 65536, 1048577, 2, 65537, 1048578, 2, 65537, 1048579, 2, 65537, 1048580, 2, 65537, 1048581, 2, 65537, 1048582, 2, 65537, 1048583, 2, 65537, 1048584, 2, 65537, 1048585, 2, 65537, 1048586, 2, 65537, 1048587, 2, 65537, 1048588, 2, 65537, 1048589, 2, 65537, 1048590, 2, 65537, 1048591, 2, 65537, 1048592, 2, 65537, 1048593, 2, 65537, 1048594, 2, 65537, 1048595, 2, 65537, 1048596, 2, 65537, 1048597, 2, 65537, 1048598, 2, 65537, 1048599, 2, 65537, 1048600, 2, 65537, 1048601, 2, 65537, 1048602, 2, 65537, 1048603, 2, 65537, 1048604, 2, 65537, 1048605, 2, 65537, 1048606, 2, 65537, 1048607, 2, 65538, 1114112, 2, 65536, 1114113, 2, 65537, 1114114, 2, 65537, 1114115, 2, 65537, 1114116, 2, 65537, 1114117, 2, 65537, 1114118, 2, 65537, 1114119, 2, 65537, 1114120, 2, 65537, 1114121, 2, 65537, 1114122, 2, 65537, 1114123, 2, 65537, 1114124, 2, 65537, 1114125, 2, 65537, 1114126, 2, 65537, 1114127, 2, 65537, 1114128, 2, 65537, 1114129, 2, 65537, 1114130, 2, 65537, 1114131, 2, 65537, 1114132, 2, 65537, 1114133, 2, 65537, 1114134, 2, 65537, 1114135, 2, 65537, 1114136, 2, 65537, 1114137, 2, 65537, 1114138, 2, 65537, 1114139, 2, 65537, 1114140, 2, 65537, 1114141, 2, 65537, 1114142, 2, 65537, 1114143, 2, 65538, 1179648, 2, 65536, 1179649, 2, 65537, 1179650, 2, 65537, 1179651, 2, 65537, 1179652, 2, 65537, 1179653, 2, 65537, 1179654, 2, 65537, 1179655, 2, 65537, 1179656, 2, 65537, 1179657, 2, 65537, 1179658, 2, 65537, 1179659, 2, 65537, 1179660, 2, 65537, 1179661, 2, 65537, 1179662, 2, 65537, 1179663, 2, 65537, 1179664, 2, 65537, 1179665, 2, 65537, 1179666, 2, 65537, 1179667, 2, 65537, 1179668, 2, 65537, 1179669, 2, 65537, 1179670, 2, 65537, 1179671, 2, 65537, 1179672, 2, 65537, 1179673, 2, 65537, 1179674, 2, 65537, 1179675, 2, 65537, 1179676, 2, 65537, 1179677, 2, 65537, 1179678, 2, 65537, 1179679, 2, 65538, 1245184, 2, 131072, 1245185, 2, 131073, 1245186, 2, 131073, 1245187, 2, 131073, 1245188, 2, 131073, 1245189, 2, 131073, 1245190, 2, 131073, 1245191, 2, 131073, 1245192, 2, 131073, 1245193, 2, 131073, 1245194, 2, 131073, 1245195, 2, 131073, 1245196, 2, 131073, 1245197, 2, 131073, 1245198, 2, 131073, 1245199, 2, 131073, 1245200, 2, 131073, 1245201, 2, 131073, 1245202, 2, 131073, 1245203, 2, 131073, 1245204, 2, 131073, 1245205, 2, 131073, 1245206, 2, 131073, 1245207, 2, 131073, 1245208, 2, 131073, 1245209, 2, 131073, 1245210, 2, 131073, 1245211, 2, 131073, 1245212, 2, 131073, 1245213, 2, 131073, 1245214, 2, 131073, 1245215, 2, 131074 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65537, 1, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 1, 0, 65563, 1, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 131073, 1, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 196609, 1, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 1, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 1, 0, 196634, 0, 0, 196635, 0, 0, 196636, 1, 0, 196637, 0, 0, 196638, 0, 0, 262145, 1, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 1, 0, 262150, 0, 0, 262151, 0, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 1, 0, 262170, 0, 0, 262171, 0, 0, 262172, 1, 0, 262173, 1, 0, 262174, 0, 0, 327681, 1, 0, 327682, 0, 0, 327683, 0, 0, 327684, 1, 0, 327685, 0, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 1, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 1, 0, 327709, 1, 0, 327710, 1, 0, 393217, 0, 0, 393218, 1, 0, 393219, 0, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 1, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 1, 0, 393245, 0, 0, 393246, 1, 0, 458753, 0, 0, 458754, 1, 0, 458755, 0, 0, 458756, 1, 0, 458757, 1, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 1, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 1, 0, 458768, 0, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 1, 0, 458776, 1, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 1, 0, 458781, 1, 0, 458782, 1, 0, 524289, 0, 0, 524290, 1, 0, 524291, 0, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 1, 0, 524304, 1, 0, 524305, 0, 0, 524306, 1, 0, 524307, 1, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 1, 0, 524312, 0, 0, 524313, 1, 0, 524314, 0, 0, 524315, 0, 0, 524316, 1, 0, 524317, 1, 0, 524318, 1, 0, 589825, 0, 0, 589826, 0, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 1, 0, 589839, 0, 0, 589840, 1, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 1, 0, 589847, 0, 0, 589848, 0, 0, 589849, 1, 0, 589850, 0, 0, 589851, 0, 0, 589852, 1, 0, 589853, 1, 0, 589854, 1, 0, 655361, 0, 0, 655362, 0, 0, 655363, 1, 0, 655364, 1, 0, 655365, 0, 0, 655366, 0, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 1, 0, 655383, 0, 0, 655384, 0, 0, 655385, 1, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 1, 0, 655390, 1, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 1, 0, 720901, 1, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 1, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720925, 1, 0, 720926, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 1, 0, 786437, 1, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 786453, 0, 0, 786454, 1, 0, 786455, 0, 0, 786456, 1, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 1, 0, 786461, 1, 0, 786462, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 1, 0, 851974, 1, 0, 851975, 0, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 0, 0, 851984, 0, 0, 851985, 1, 0, 851986, 1, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 1, 0, 851997, 1, 0, 851998, 1, 0, 917505, 0, 0, 917506, 1, 0, 917507, 0, 0, 917508, 0, 0, 917509, 1, 0, 917510, 0, 0, 917511, 1, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 1, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 0, 0, 917530, 0, 0, 917531, 0, 0, 917532, 1, 0, 917533, 1, 0, 917534, 1, 0, 983041, 0, 0, 983042, 1, 0, 983043, 0, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 1, 0, 983057, 0, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 983068, 1, 0, 983069, 1, 0, 983070, 1, 0, 1048577, 0, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 0, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048606, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 1, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 1, 0, 1114121, 0, 0, 1114122, 1, 0, 1114123, 1, 0, 1114124, 1, 0, 1114125, 1, 0, 1114126, 1, 0, 1114127, 1, 0, 1114128, 1, 0, 1114129, 1, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 1, 0, 1114139, 1, 0, 1114140, 1, 0, 1114141, 1, 0, 1114142, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 1, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 1, 0, 1179667, 1, 0, 1179668, 1, 0, 1179669, 1, 0, 1179670, 1, 0, 1179671, 1, 0, 1179672, 1, 0, 1179673, 1, 0, 1179674, 1, 0, 1179675, 0, 0, 1179676, 1, 0, 1179677, 0, 0, 1179678, 0, 0 )

[node name="Snake" parent="." instance=ExtResource( 1 )]
position = Vector2( 240, 80 )

[node name="Apple" parent="." instance=ExtResource( 2 )]
position = Vector2( 432, 208 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color( 0.364706, 0.360784, 0.419608, 1 )

[node name="Surrounding walls" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Surrounding walls"]
position = Vector2( 512, 16 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Surrounding walls"]
position = Vector2( 512, 624 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Surrounding walls"]
position = Vector2( 16, 320 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Surrounding walls"]
position = Vector2( 1008, 320 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Apple" to="." method="_on_Apple_body_entered"]
[connection signal="body_entered" from="Surrounding walls" to="." method="_on_Surrounding_walls_body_entered"]
